| Bug #43802 | NDBAPI : NdbApi created bit field null bits incorrectly handled | ||
|---|---|---|---|
| Submitted: | 23 Mar 2009 11:53 | Modified: | 30 Mar 2009 17:15 |
| Reporter: | Frazer Clement | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: NDB API | Severity: | S3 (Non-critical) |
| Version: | 6.3+ | OS: | Any |
| Assigned to: | Frazer Clement | CPU Architecture: | Any |
[23 Mar 2009 11:53]
Frazer Clement
[23 Mar 2009 12:17]
Frazer Clement
Introduced in 6.3.
[23 Mar 2009 12:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/70047 2913 Frazer Clement 2009-03-23 Bug#43802 : NdbApi created bit field null bits incorrectly handled. modified: storage/ndb/src/ndbapi/NdbDictionaryImpl.cpp storage/ndb/src/ndbapi/NdbReceiver.cpp
[23 Mar 2009 13:00]
Bugs System
Pushed into 5.1.32-ndb-7.0.5 (revid:frazer@mysql.com-20090323125739-c6bun3b6o8vv85tk) (version source revid:frazer@mysql.com-20090323125739-c6bun3b6o8vv85tk) (merge vers: 5.1.32-ndb-7.0.5) (pib:6)
[23 Mar 2009 13:01]
Bugs System
Pushed into 5.1.32-ndb-6.3.24 (revid:frazer@mysql.com-20090323125455-74x2iw4vy0vopak9) (version source revid:frazer@mysql.com-20090323125455-74x2iw4vy0vopak9) (merge vers: 5.1.32-ndb-6.3.24) (pib:6)
[30 Mar 2009 17:15]
Jon Stephens
Documented bugfix in the NDB-6.3.24 and 7.0.5 changelogs as follows:
BIT columns created using the native NDB API format that were
not created as nullable could still sometimes be overwritten, or
cause other columns to be overwritten.
This issue did not effect tables having BIT columns created
using the mysqld format (always used by MySQL Cluster SQL
nodes).
