Bug#43802 : NdbApi created bit field null bits incorrectly handled.